<resources>
    <string name="app_name">WaterfallCacheSample</string>

    <string name="rx_test_label">Rx</string>
    <string name="async_test_label">Async</string>

    <string name="get_value">Get Value</string>
    <string name="put_value">Put Value</string>
    <string name="remove_value">Remove Value</string>
    <string name="contains_value">Contains Value</string>
    <string name="clear">Clear</string>
    <string name="cache_key">Cache key</string>
</resources>
