<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".test.RxActivity">

    <TextView
        android:id="@+id/tv_value_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_get_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_value" />

    <EditText
        android:id="@+id/et_value_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_put_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/put_value" />

    <Button
        android:id="@+id/btn_remove_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_value" />

    <Button
        android:id="@+id/btn_contains_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contains_value" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear" />

    <EditText
        android:id="@+id/et_key_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cache_key"
        android:inputType="text" />
</LinearLayout>
